testsuite/poke.pkl/try-catch-diag-1.pk
/* { dg-do compile } */

fun foo = int:
  {
   try
     raise Exception {code = 1};
   catch (string e) /* { dg-error "" } */
   {
     var foo = 10;
     foo = 20;
   }
   return 666;
  }
